feat: show read data at radar labels panel
