# src-be/app/model/radar-config.ts
@@ -1,4 +1,6 @@
 export interface RadarConfig {
 	name: string;
+	rings: string[];
+	sectors: string[];
 	csv: string;
 }
