# src-fe/src/app/libs/radar-view/model/radar-config.ts
@@ -1,4 +1,6 @@
 export interface RadarConfig {
 	name: string;
 	csv: string;
+	rings: string[];
+	sectors: string[];
 }
